layout-3 fixed overflow on view data display

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,21 +1,20 @@
 .container {
     position: relative;
-    display: inline-block;
-}
+  }
   
-.jsonContainer {
+  .jsonContainer {
     position: absolute;
-    top: 100%;
+    top: 50px;
     right: 0;
     background-color: rgba(0, 0, 0, 0.7);
     color: white;
     padding: 10px;
     border-radius: 5px;
-    width: 500px;
+    width: 100px;
     max-height: 700px;
     overflow-y: auto;
     z-index: 1000;
     white-space: pre-wrap;
     font-family: "Courier New", Courier, monospace;
-}
+  }
   
